NEXT:
 * Fix error message for unknown chroot tarball extension.
 * Unbreak collect_project functionality with files in proj/init.

e2factory-2.3.14

e2factory-2.3.14rc1
 * Fix: Include result name in buildid calculation.
 * Fix: Removed hardcoded "base" chroot group in collect_project.
 * Fix: Backtrace due to missing module in git plugin during wc-mode.

e2factory-2.3.13

e2factory-2.3.13rc5
 * Bug fixes for showing the man-pages.
 * Manpage fixes.

e2factory-2.3.13rc4
 * interrupt_hook() bugfix.

e2factory-2.3.13rc3
 * Add git url protocol support.
 * Add http, https and svn url support to svn plugin.

e2factory-2.3.13rc2
 * Drop guessing the archive file type using magic numbers.
 * Add tar.xz support, requires tar and xz in the chroot.
 * Update templates configs, add formating and modelines.
 * Update various readme and documentation pointers.
 * Do not accidentally drop error messages from stat() and others.

e2factory-2.3.13rc1
 * Change source git URL construction to be compatible with assembla.
 * e2-cf can now handle source and result groups, plus better error checking.
 * Result and source names are better enforced, dots are only legal for groups.
 * --help now displays the manual page of the tool.
 * Add command e2-help to view project-specific help.
 * Fix error propagation from sub-makes when building e2factory.
 * Don't warn when hardlink optimization fails.
 * Default .gitignore when creating a project improved.
 * Many improvements and additions to the developer documentation.
 * Bugfix: Remove undocumented requirement on "base" chroot group.
   This requires a BUILDID change. All results will have to be rebuilt.
 * Add, improve and update man pages for all tools.
 * Remove outdated and misleading example directory.
 * e2-fetch-sources now checks out working copy after cloning.
 * Many fixes concerning proper pathname handling.
 * Improve e2source copy attribute, auto-creates missing directories and more.